# Harmonia

./: README.md
internal/harc/: CMakeLists.txt  Doxyfile
internal/harc/docs/html/: AST_8cpp.html  Algorithms_8cpp.html  Algorithms_8cpp__incl.map  Algorithms_8cpp__incl.md5  Algorithms_8hpp.html  Algorithms_8hpp__dep__incl.map  Algorithms_8hpp__dep__incl.md5  Algorithms_8hpp__incl.map  Algorithms_8hpp__incl.md5  Algorithms_8hpp_source.html  Bytecode_8hpp.html  Bytecode_8hpp__incl.map  Bytecode_8hpp__incl.md5  Bytecode_8hpp_source.html  CLI_8cpp.html  CLI_8cpp__incl.map  CLI_8cpp__incl.md5  CLI_8hpp.html  CLI_8hpp__dep__incl.map  CLI_8hpp__dep__incl.md5  CLI_8hpp__incl.map  CLI_8hpp__incl.md5  CLI_8hpp_source.html  Const__folding_8hpp.html  Const__folding_8hpp_source.html  Documentation_8cpp.html  Documentation_8hpp.html  Documentation_8hpp_source.html  Emitter_8cpp.html  Emitter_8cpp__incl.map  Emitter_8cpp__incl.md5  Emitter_8hpp.html  Emitter_8hpp__dep__incl.map  Emitter_8hpp__dep__incl.md5  Emitter_8hpp__incl.map  Emitter_8hpp__incl.md5  Emitter_8hpp_source.html  Error__codes_8cpp.html  Error__codes_8cpp__incl.map  Error__codes_8cpp__incl.md5  (+806 more)
internal/harc/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+98 more)
internal/harc/include/harc/: Error_reporting.hpp  Errors.hpp  Harc.hpp  Harc_cuda.hpp  Logging.hpp  Networking.hpp  Settings.hpp  Symbols.hpp  Translation_unit.hpp  Translation_unit_cuda.hpp  Version.hpp
internal/harc/include/harc/arch/: Cache.hpp  Processor.hpp  Uarch.hpp  x86_configurations.hpp
internal/harc/include/harc/cli/: CLI.hpp  CLI_arguments.hpp  Errors.hpp
internal/harc/include/harc/common/: Algorithms.hpp  OS_utils.hpp
internal/harc/include/harc/cuda_common/: Algorithms.cuh  Codepoint_manipulation.cuh  Codepoint_manipulation_tables.cuh
internal/harc/include/harc/emitter/: Emitter.hpp
internal/harc/include/harc/hvm/: Bytecode.hpp  Harc_virtual_machine.hpp
internal/harc/include/harc/ir/: Folding.hpp  IR.hpp  Inlining.hpp
internal/harc/include/harc/lexer/: Lexer.hpp  Lexing_errors.hpp  Tokenization.hpp  Tokens.hpp
internal/harc/include/harc/lexer_cuda/: Lexer_cuda.hpp  Lexing_cuda.hpp
internal/harc/include/harc/parser/: Const_folding.hpp  Documentation.hpp  Layout_checker.hpp  Operators.hpp  Parse_tree.hpp  Parse_tree_fwd.hpp  Parse_tree_visitor.hpp  Parser.hpp  Printer.hpp  Type_checker.hpp
internal/harc/include/harc/prepass/: Prepass.hpp  Prepass_errors.hpp
internal/harc/plans/harc/: Resilience.md
internal/harc/plans/harc/bytecode/: Bytecode.md  Const_propagation.md  Instructions.md  Ops.md  Registers.md
internal/harc/plans/harc/emitter/: ABI.md
internal/harc/plans/harc/ir/: Semantic IR.md
internal/harc/plans/harc/tokenizer/: Pairing.md
internal/harc/plans/harmonia/: Arrays_and_vectors.md  Attributes.md  Built-in Types.md  Code_style.md  Definitions.md  Exceptions.md  Grammar.md  Harmonia.md  Iterators.md  Keywords.md  Objects_and_representation.md  Parameters.md  Precedence.md
internal/harc/plans/harmonia/features/: Assumptions.md  Const.md  Features.md  Functions.md  Layouts.md  Modules.md  Operators.md  Ranges.md  Reflection.md  Static_assertions.md  Switch_statements.md  Traits.md  Types.md  Views.md
internal/harc/plans/harmonia/source_files/: Source_files.md
internal/harc/plans/harmonia/standard_library/math/: Float_fields.md
internal/harc/plans/harmonia/syntax/: Literals.md  Tokens.md
internal/harc/plans/harmonia/traits/: Matchable.md
internal/harc/src/: Error_reporting.cpp  Errors.cpp  Harc.cpp  Harc_cuda.cpp  Logging.cpp  Main.cpp  Symbols.cpp  Translation_unit.cpp  Translation_unit_cuda.cpp
internal/harc/src/cli/: CLI.cpp  CLI_arguments.cpp  Errors.cpp
internal/harc/src/common/: Algorithms.cpp  OS_utils.cpp
internal/harc/src/cuda_common/: Algorithm.cu  Codepoint_manipulation.cu  Synchronization.cu
internal/harc/src/emitter/: Emitter.cpp
internal/harc/src/hvm/: Harc_virtual_machine.cpp
internal/harc/src/ir/: Folding.cpp  IR.cpp  Inlining.cpp
internal/harc/src/lexer/: Lexer.cpp  Tokens.cpp
internal/harc/src/lexer_cuda/: Lexer_cuda.cu
internal/harc/src/parser/: Parser.cpp  Printer.cpp
internal/harc/src/prepass/: Prepass.cpp
internal/harc/support/: CMakeLists.txt  Unicode_properties.cpp
